Implement prototype - first try.